# advent-of-code

./: README.md
2024/rust/: Cargo.toml  justfile  rust-toolchain.toml
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/day-03/src/: part1.rs  part2.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/src/: part1.rs  part2.rs
2024/rust/day-05/src/: part1.rs  part2.rs
2024/rust/day-06/: Cargo.toml
2024/rust/day-06/src/: part1.rs  part2.rs
2024/rust/day-07/src/: part1.rs  part2.rs
2024/rust/day-08/src/: part1.rs  part2.rs
2024/rust/day-09/src/: part1.rs  part2.rs
2024/rust/day-10/: Cargo.toml
2024/rust/day-10/benches/: benchmarks.rs
2024/rust/day-10/src/: part1.rs  part2.rs
2024/rust/day-11/src/: part1.rs  part2.rs
2024/rust/day-12/: Cargo.toml
2024/rust/day-12/src/: part1.rs  part2.rs
2024/rust/day-13/: Cargo.toml
2024/rust/day-13/src/: part1.rs  part2.rs
2024/rust/day-14/src/: part1.rs  part2.rs
2024/rust/day-15/src/: part1.rs  part2.rs
2024/rust/day-16/: Cargo.toml
2024/rust/day-16/src/: part1.rs  part2.rs
2024/rust/day-17/src/: part1.rs  part2.rs
2024/rust/day-18/: Cargo.toml
2024/rust/day-18/src/: part1.rs  part2.rs
2024/rust/day-19/benches/: benchmarks.rs
2024/rust/day-19/src/: part1.rs  part2.rs
2024/rust/day-20/: Cargo.toml
2024/rust/day-20/src/: part1.rs  part2.rs
2024/rust/day-21/: Cargo.toml
2024/rust/day-21/benches/: benchmarks.rs
2024/rust/day-21/src/: part1.rs  (+1 more)
2024/rust/scripts/: get-aoc-input.rs
(+3 files in other folders)
